add function for new recipe

--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+    <script src="./js/recipeManager.js"></script>
     <script src="./js/index.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
