create render function

--- a/index.html
+++ b/index.html
@@ -157,19 +157,8 @@
             <!-- Starters column -->
           <div class="col">
             <h2 class="text-center">Starters and Salads</h2>
-            <ul>
-                <li>
-                    <div class="card">
-                        <img id="cardImage" src="./images/chocolateCake.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <h5 >Ingredients:</h4>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <h5>Instructions:</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </li>
+            <ul id="starterCol">
+                
             </ul>
           </div>
 
