--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       <!-- start of layout for recipe cards -->
       
-        <div class="row justify-content-center mt-3 mx-3">
+        <div id="recipeContainer" class="row justify-content-center mt-3 mx-3">
             <!-- Starters column -->
           <div class="col">
             <h2 class="text-center">Starters/Salads</h2>
