add to delete functionality

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <!-- Starters column -->
           <div class="col">
             <h2 class="text-center">Starters/Salads</h2>
-            <ul id="starterCol"></ul>
+            <ul id="starterCol">
                 
             </ul>
           </div>
